fixed uneven pricing tables issue

--- a/TinDog/css/styles.css
+++ b/TinDog/css/styles.css
@@ -141,6 +141,10 @@ p {
   padding: 3% 2%;
 }
 
+.no-show {
+  visibility: hidden;
+}
+
 /* CALL TO ACTION */
 
 #cta {
